debian/traefik/dashboard/Ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: <NAME>
  namespace: <NAMESPACE>
  annotations: 
    kubernetes.io/ingress.class: <INGRESS_CLASS_NAME>
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`<HOSTNAME>`)
      kind: Rule
      middlewares:
        - name: <BASIC_AUTH_MIDDLEWARE_NAME>
          namespace: <NAMESPACE_MIDDLEWARE>
      services:
        - name: api@internal
          kind: TraefikService
#  tls:
#    secretName: local-example-com-staging-tls
